Upcoming:
- New 'cavespheres' Lost world type combining caverns and spheres
- New lostworlds:abyss dimension that demonstrates the new cavern with spheres

1.20-0.0.2:
- Small crash fix

1.20-0.0.1:
- First release of Lost Worlds