@@ -11,6 +11,7 @@ import org.joml.Matrix4f;
 
 public class LostWorldsSpecialEffects extends DimensionSpecialEffects {
 
+    public static boolean disabled = true;
     public static LostWorldType type;
     public static FogColor fogColor;
 
@@ -20,7 +21,9 @@ public class LostWorldsSpecialEffects extends DimensionSpecialEffects {
 
     @Override
     public Vec3 getBrightnessDependentFogColor(Vec3 color, float brightness) {
-        if (fogColor == FogColor.NONE || fogColor == null) {
+        if (disabled) {
+            return color.multiply(brightness * 0.94F + 0.06F, brightness * 0.94F + 0.06F, brightness * 0.91F + 0.09F);
+        } else if (fogColor == FogColor.NONE || fogColor == null) {
             if (type == LostWorldType.ISLANDS || type == LostWorldType.SPHERES || type == LostWorldType.NORMAL || type == LostWorldType.ATLANTIS) {
                 return color.multiply(brightness * 0.94F + 0.06F, brightness * 0.94F + 0.06F, brightness * 0.91F + 0.09F);
             } else {
@@ -33,7 +36,7 @@ public class LostWorldsSpecialEffects extends DimensionSpecialEffects {
 
     @Override
     public SkyType skyType() {
-        if (type == LostWorldType.CAVES) {
+        if (type == LostWorldType.CAVES && !disabled) {
             return SkyType.NONE;
         }
         return super.skyType();
@@ -41,7 +44,7 @@ public class LostWorldsSpecialEffects extends DimensionSpecialEffects {
 
     @Override
     public boolean hasGround() {
-        if (type == LostWorldType.ISLANDS || type == LostWorldType.SPHERES) {
+        if (type == LostWorldType.ISLANDS || type == LostWorldType.SPHERES && !disabled) {
             return false;
         }
         return super.hasGround();
@@ -49,11 +52,14 @@ public class LostWorldsSpecialEffects extends DimensionSpecialEffects {
 
     @Override
     public boolean isFoggyAt(int x, int y) {
-        return fogColor != FogColor.NONE;
+        return fogColor != FogColor.NONE && !disabled;
     }
 
     @Override
     public boolean renderSky(ClientLevel level, int ticks, float partialTick, PoseStack poseStack, Camera camera, Matrix4f projectionMatrix, boolean isFoggy, Runnable setupFog) {
+        if (disabled) {
+            return false;
+        }
         if (type == LostWorldType.ISLANDS || type == LostWorldType.SPHERES) {
             level.getLevelData().isFlat = true;
         }
